--- a/index.html
+++ b/index.html
@@ -15,7 +15,7 @@
   <body>
     <div id="container">
       <div id="profile">
-        <img src="./img/Avatar.png" alt="Foto de Adalberto Silvestre Sorindo" />
+        <img src="./assets/img/Avatar.png" alt="Foto de Adalberto Silvestre Sorindo" />
         <p>@AdalbertoAo</p>
       </div>
       <div class="switch" onclick="toggleMode()">
